// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`commonsChunkPlugin transforms correctly using "commonsChunkPlugin-0" data 1`] = `
"module.export = {
    optimizations: {
        splitChunks: {
            minChunks: 2,

            cacheGroups: {
                common: {
                    chunks: 'initial',
                    enforce: true,
                    name: 'common'
                },

                vendor: {
                    chunks: 'initial',
                    enforce: true,
                    name: 'vendor',
                    test: '/node_modules/'
                }
            }
        }
    }
}
"
`;

exports[`commonsChunkPlugin transforms correctly using "commonsChunkPlugin-1" data 1`] = `
"module.export = {
    optimizations: {
        splitChunks: {
            cacheGroups: {
                common: {
                    chunks: 'initial',
                    enforce: true,
                    name: 'common'
                },

                vendor: {
                    chunks: 'initial',
                    enforce: true,
                    name: 'vendor',
                    test: '/node_modules/'
                }
            }
        }
    }
}
"
`;

exports[`commonsChunkPlugin transforms correctly using "commonsChunkPlugin-2" data 1`] = `
"module.export = {
    optimizations: {
        splitChunks: {
            cacheGroups: {
                vendor: {
                    chunks: 'initial',
                    enforce: true,
                    name: 'vendor',
                    test: '/node_modules/'
                }
            }
        }
    }
}
"
`;

exports[`commonsChunkPlugin transforms correctly using "commonsChunkPlugin-3" data 1`] = `
"module.export = {
    optimizations: {
        splitChunks: {
            cacheGroups: {
                commons: {
                    chunks: 'initial',
                    enforce: true,
                    name: 'commons'
                }
            }
        }
    }
}
"
`;

exports[`commonsChunkPlugin transforms correctly using "commonsChunkPlugin-4" data 1`] = `
"module.export = {
    optimizations: {
        splitChunks: {
            chunks: 'async',
            minSize: 0,
            minChunks: 2,

            cacheGroups: {
                main: {
                    chunks: 'initial',
                    enforce: true,
                    name: 'main'
                }
            }
        }
    }
}
"
`;

exports[`commonsChunkPlugin transforms correctly using "commonsChunkPlugin-5" data 1`] = `
"module.export = {
    optimizations: {
        splitChunks: {
            cacheGroups: {
                main: {
                    chunks: 'initial',
                    enforce: true,
                    name: 'main'
                }
            }
        },

        runtimeChunk: true
    }
}
"
`;

exports[`commonsChunkPlugin transforms correctly using "commonsChunkPlugin-6" data 1`] = `
"module.export = {
    optimizations: {
        splitChunks: {
            cacheGroups: {
                main: {
                    chunks: 'initial',
                    enforce: true,
                    name: 'main'
                },

                name: {
                    chunks: 'initial',
                    enforce: true,
                    name: 'name',
                    test: ({ resource }) => /node_modules/.test(resource),

                    test: ({ resource }) => {
                        var foo = \\"bar\\";
                        return /node_modules/.test(resource);
                    },

                    test: function ({ resource }) {
                        var foo = \\"bar\\";
                        return /node_modules/.test(resource);
                    },

                    test: function ({ resource }) {
                        var foo = \\"bar\\";
                        if (foo) {
                            return /node_modulesfoo/.test(resource);
                        } else if (foo === \\"something\\") {
                            return /node_modulesbar/.test(resource);
                        } else {
                            return /node_modulesbaz/.test(resource);
                        }
                    }
                }
            }
        }
    }
}
"
`;

exports[`commonsChunkPlugin transforms correctly using "commonsChunkPlugin-7" data 1`] = `
"module.export = {
    optimizations: {
        splitChunks: {
            minChunks: Infinity,

            cacheGroups: {
                main: {
                    chunks: 'initial',
                    enforce: true,
                    name: 'main'
                },

                vendor: {
                    chunks: 'initial',
                    enforce: true,
                    name: 'vendor',
                    test: '/node_modules/'
                }
            }
        }
    }
}
"
`;
